--- a/css/estilo.css
+++ b/css/estilo.css
@@ -37,7 +37,7 @@ a { text-decoration: none;
 }
 
 a:visited {
-    color: rgb(49, 49, 49);
+    color: rgb(252, 250, 250);
 }
   a:hover, a:active, a:focus {
     color:rgb(31, 50, 158);
@@ -224,7 +224,15 @@ blockquote span{
     font-size: 18px;
     transition: all 0.5s;
     cursor: pointer;
+    margin: 5px;
 }
+
+.nav-boton-menu span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
 
 .nav-boton-menu span:after {
     content: '\00bb';
