--- a/css/estilo.css
+++ b/css/estilo.css
@@ -104,8 +104,7 @@ ul {
 .img-default {
     border-radius: 3%;
       box-shadow: rgb(150, 150, 150) 5px 5px 5px;
-      width: auto;
-      height: auto;
+      width: 40%;
       margin: 3%;
 }
 
