Se agrega espacio debajo del texto de las imagenes de la pagina de Quince

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -412,7 +412,12 @@ blockquote {
 
 .img-default {
     width: 80%;
-    max-width: 320px;       
+    max-width: 320px;  
+    margin-bottom: 10px;     
+}
+
+figcaption {
+    margin-bottom: 20px;
 }
 
 .whatsapp-responsive {
