Adaptacion de pagina Retratos con framework Grid

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -97,6 +97,7 @@ ul {
     list-style: none;
 }
 
+/*Inicio de seteo de grid en el Index*/
 .grid-container {
     display: grid;
     gap: 10px;
@@ -146,6 +147,36 @@ ul {
 .img-3 {
     grid-area: foto-3;
 }
+                            /*Pagina Retrato*/
+
+        /*Inicio de seteo de la pagina Retratos con grid para vista desktop*/
+
+.grid-container-2 {
+    display:grid;
+    gap: 2rem; 
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+}
+
+.img-retrato {
+    width: 90%;
+}
+
+        /*Fin de seteo de la pagina Retratos con grid para vista desktop*/
+
+        
+        /*Inicio de seteo de la pagina Retratos con grid para vista movil*/
+
+@media(max-width: 500px) {
+
+    .grid-container-2 {
+        display:grid;
+        gap: 2rem; 
+        grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
+    }
+}
+
+        /*Fin de seteo del grid para la pagina de Retratos vista movil*/
+
 
 
 /* Fotografías con esquinas redondeadas y sombras*/
@@ -361,6 +392,7 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 
 /* Seteo del tamaño del botón de Whatsapp */
 .whatsapp-responsive {
