--- a/css/estilo.css
+++ b/css/estilo.css
@@ -97,7 +97,6 @@ ul {
     list-style: none;
 }
 
-/*Inicio de seteo de grid en el Index*/
 .grid-container {
     display: grid;
     gap: 10px;
@@ -147,36 +146,6 @@ ul {
 .img-3 {
     grid-area: foto-3;
 }
-                            /*Pagina Retrato*/
-
-        /*Inicio de seteo de la pagina Retratos con grid para vista desktop*/
-
-.grid-container-2 {
-    display:grid;
-    gap: 2rem; 
-    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
-}
-
-.img-retrato {
-    width: 90%;
-}
-
-        /*Fin de seteo de la pagina Retratos con grid para vista desktop*/
-
-        
-        /*Inicio de seteo de la pagina Retratos con grid para vista movil*/
-
-@media(max-width: 500px) {
-
-    .grid-container-2 {
-        display:grid;
-        gap: 2rem; 
-        grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
-    }
-}
-
-        /*Fin de seteo del grid para la pagina de Retratos vista movil*/
-
 
 
 /* Fotografías con esquinas redondeadas y sombras*/
@@ -331,6 +300,28 @@ footer {
 }
 /*Fin del iframe de Youtube responsive*/
 
+/* Bot+on de Whatsapp animado*/
+
+.whats-boton:hover{
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+
 /* Formato del título de  cajas-1, 2 y 3 */
 footer div div span {
     font: 25px bold;
@@ -393,7 +384,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
 /* Seteo del tamaño del botón de Whatsapp */
 .whatsapp-responsive {
     width: 20%;
@@ -405,12 +395,12 @@ body {
 @media(max-width: 500px) {
 
 header {
-    height: 130px;
+    height: 150px;
 }
 
 /*Adaptación del tamaño del logo para dispositivos móviles*/
 header div a img {
-    width: 210px;
+    width: 250px;
     }
    
 .img-index {
@@ -451,4 +441,9 @@ blockquote {
 figcaption {
     margin-bottom: 20px;
 }
+
+.whatsapp-responsive {
+    width: 90%;
+}
+
 }
