--- a/css/estilo.css
+++ b/css/estilo.css
@@ -149,7 +149,7 @@ ul {
 }
                             /*Pagina Retrato*/
 
-        /*Inicio de seteo de la pagina Retratos con grid para vista escritorio*/
+        /*Inicio de seteo de la pagina Retratos con grid para vista desktop*/
 
 .grid-container-2 {
     display:grid;
