--- a/css/estilo.css
+++ b/css/estilo.css
@@ -73,7 +73,7 @@ h1 {
 h2 {
     text-align: justify;
     margin-top: 2%;
-    margin-bottom: 2%;
+    margin-bottom: 7%;
 }
 
 /* Formato para la etiqueta */
@@ -405,6 +405,7 @@ figcaption {
     font-style: italic;
     font-size: 14px;
     margin-bottom: 1.5%;
+    margin-top: 3%;
 }
 /* Centrado de tabla en la pantalla */
 .wrapper-table > table {
