--- a/css/estilo.css
+++ b/css/estilo.css
@@ -254,10 +254,12 @@ p {
 
 /* Configuración del footer*/
 #footer-contenedor {
-  display: flex ; /* Con esta declaración, las tres cajas se comportan en línea */
+  display:flex;
+  justify-content:space-evenly;
   margin: 10px 10px;
   padding: 10px 10px;
   width: auto;
+  flex-wrap: wrap;
 }
 
 /* Fondo rosa del footer */
@@ -308,17 +310,6 @@ footer {
 footer div div span {
     font: 25px bold;
     text-align: center;
-}
-
-/* Formato de caja-1 */
-.caja {
-    flex: 1;
-    margin-right: 5%;
-    margin-left: 5%;
-    font-size: 10px;
-    /*border: 1px solid #555555;
-    border-radius: 5%;
-    box-shadow: 5px 5px 10px #555555;*/
 }
 
 .titulo-mapa {
