--- a/css/estilo.css
+++ b/css/estilo.css
@@ -348,15 +348,6 @@ body {
     width: 20%;
 }
 
-
-/* Inicio de seteo para dispositivos móviles */
-
-@media(max-width: 500px) {
-
-header {
-    height: 150px;
-}
-
 /*Adaptación del tamaño del logo para dispositivos móviles*/
 header div a img {
     width: 250px;
@@ -405,4 +396,12 @@ figcaption {
     width: 90%;
 }
 
+
+/* Ancho fijo del body para pagina Quince */
+
+.ancho-fijo {
+    max-width: 960px;
+    margin: auto;
 }
+
+
